force-app/main/default/objects/PDFBuilderTemplate__c/PDFBuilderTemplate__c.object-meta.xml
<CustomObject>
    <label>PDF Builder Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDF Builder Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>