force-app/main/default/objects/PDFBuilderTemplate__c/fields/ContentJson__c.field-meta.xml
<CustomField>
    <fullName>ContentJson__c</fullName>
    <label>Content JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>