force-app/main/default/objects/PDFBuilderTemplate__c/fields/DefaultScopeKey__c.field-meta.xml
<CustomField>
    <fullName>DefaultScopeKey__c</fullName>
    <label>Default Scope Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>