force-app/main/default/objects/PDFBuilderTemplate__c/fields/GeneratedHtml__c.field-meta.xml
<CustomField>
    <fullName>GeneratedHtml__c</fullName>
    <label>Generated HTML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>