force-app/main/default/objects/PDFBuilderTemplate__c/fields/IsDefault__c.field-meta.xml
<CustomField>
    <fullName>IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Template</label>
    <type>Checkbox</type>
</CustomField>