force-app/main/default/objects/PDFBuilderTemplate__c/fields/RecordTypeScope__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeScope__c</fullName>
    <defaultValue>"ALL"</defaultValue>
    <label>Record Type Scope</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>